Se agregan cambios a las funciones

--- a/AMLM/Activity_3b/TC5033_Activity3b_42.ipynb
+++ b/AMLM/Activity_3b/TC5033_Activity3b_42.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "54394f53",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "878b524f",
    "metadata": {},
    "outputs": [],
@@ -95,6 +95,11 @@
     "# The following libraries are required for running the given code\n",
     "# Please feel free to add any libraries you consider adecuate to complete the assingment.\n",
     "import numpy as np\n",
+    "\n",
+    "#Torchtext\n",
+    "import torchtext\n",
+    "torchtext.disable_torchtext_deprecation_warning()\n",
+    "\n",
     "#PyTorch libraries\n",
     "import torch\n",
     "from torchtext.datasets import AG_NEWS\n",
@@ -116,14 +121,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6cec9dd",
+   "metadata": {},
+   "source": [
+    "## Using GPU"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3bab55f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mps\n"
+     ]
+    }
+   ],
    "source": [
-    "# Use GPU if available\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device('cuda') # GPU will be used if available\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    device = torch.device('mps') # GPU will be used in Apple Silicon Macs if available\n",
+    "else:\n",
+    "    device = torch.device('cpu') # CPU will be used if GPU is not available\n",
     "print(device)"
    ]
   },
@@ -163,10 +188,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "49fbed19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/raulastrga/anaconda3/lib/python3.12/site-packages/torchdata/datapipes/__init__.py:18: UserWarning: \n",
+      "################################################################################\n",
+      "WARNING!\n",
+      "The 'datapipes', 'dataloader2' modules are deprecated and will be removed in a\n",
+      "future torchdata release! Please see https://github.com/pytorch/data/issues/1196\n",
+      "to learn more and leave feedback.\n",
+      "################################################################################\n",
+      "\n",
+      "  deprecation_warning()\n"
+     ]
+    }
+   ],
    "source": [
     "train_dataset, test_dataset = AG_NEWS()\n",
     "train_dataset, test_dataset = to_map_style_dataset(train_dataset), to_map_style_dataset(test_dataset)"
@@ -174,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9c372eb9",
    "metadata": {},
    "outputs": [],
@@ -190,10 +231,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "794d0375",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Vocab' object has no attribute 'get_vecs_by_tokens'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#set unknown token at position 0\u001b[39;00m\n\u001b[1;32m      4\u001b[0m vocab\u001b[38;5;241m.\u001b[39mset_default_index(vocab[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m<unk>\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m----> 6\u001b[0m vocab\u001b[38;5;241m.\u001b[39mget_vecs_by_tokens([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWorld\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/torch/nn/modules/module.py:1709\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1707\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[1;32m   1708\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1709\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Vocab' object has no attribute 'get_vecs_by_tokens'"
+     ]
+    }
+   ],
    "source": [
     "# Build the vocabulary\n",
     "vocab = build_vocab_from_iterator(yield_tokens(train_dataset), specials=[\"<unk>\"])\n",
@@ -203,10 +257,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b48268d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['welcome', 'to', 'te3007'] [3314, 4, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "#test tokens\n",
     "tokens = tokeniser('Welcome to TE3007')\n",
@@ -215,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c8c8f6a6",
    "metadata": {},
    "outputs": [],
@@ -226,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8290895e",
    "metadata": {},
    "outputs": [],
@@ -236,17 +298,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cbc75b54",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108000 12000 7600\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(train_dataset), len(val_dataset), len(test_dataset))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ffdbf077",
    "metadata": {},
    "outputs": [],
@@ -266,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5eb459c7",
    "metadata": {},
    "outputs": [],
@@ -278,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0a55e6ee",
    "metadata": {},
    "outputs": [],
@@ -298,15 +368,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "50f20793",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (241441492.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[14], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    EMBEDDING_SIZE = # complete\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "EMBEDDING_SIZE = # complete\n",
-    "NEURONS = # complete\n",
+    "EMBEDDING_SIZE = 256\n",
+    "NEURONS = 512\n",
     "LAYERS = # complete\n",
-    "NUM_CLASSES = # complete"
+    "NUM_CLASSES = len(labels)"
    ]
   },
   {
@@ -322,14 +401,15 @@
     "        self.embedding_layer = nn.Embedding(num_embeddings=len(vocab), \n",
     "                                            embedding_dim=embed_size)\n",
     "        \n",
-    "        self.rnn = pass # complete this code/\n",
-    "                        # You may use PyTorch nn.GRU(), nn.RNN(), or nn.LSTM()\n",
+    "        self.rnn = nn.LSTM(embed_size, hidden, batch_first=True)\n",
     "        \n",
-    "        self.fc = pass # complete output classifier layer using linear layer\n",
+    "        self.fc = nn.Linear(hidden, len(vocab))\n",
     "        \n",
-    "    def forward(self, x):\n",
-    "        pass\n",
-    "        # implement forward pass. This function will be called when executing the model"
+    "    def forward(self, x, hidden, cell):\n",
+    "        out = self.embedding(x).unsqueeze(1)\n",
+    "        out, (hidden, cell) = self.rnn(out, (hidden, cell))\n",
+    "        out = self.fc(out).reshape(out.size(0), -1)\n",
+    "        return out, hidden, cell"
    ]
   },
   {
@@ -342,7 +422,29 @@
    "outputs": [],
    "source": [
     "def accuracy(model, loader):\n",
-    "    pass"
+    "    \"\"\"\n",
+    "    Calculates the accuracy of the model depending of the loader (train, test, validation)\n",
+    "\n",
+    "    Args:\n",
+    "    model: Feature set\n",
+    "    loader: Dataset with features and labels\n",
+    "\n",
+    "    Returns:\n",
+    "    float: Model accuracy\n",
+    "    \"\"\"\n",
+    "    num_correct = 0 #First we intialize the variables\n",
+    "    num_total = 0\n",
+    "    model.eval() # This function set the model on evaluation, then it will not compute the gradiants of the parameters\n",
+    "    model = model.to(device=device) # The model is charged on the device\n",
+    "    with torch.no_grad(): \n",
+    "        for (xi, yi) in loader:\n",
+    "            xi = xi.to(device=device, dtype = torch.float32) # Each image and correct class of the image is charged on the GPU\n",
+    "            yi = yi.to(device=device, dtype = torch.long)\n",
+    "            scores = model(xi) # mb_size, 10 With this function all the model runs and calculates its scores\n",
+    "            _, pred = scores.max(dim=1) #pred shape (mb_size ) \n",
+    "            num_correct += (pred == yi).sum() # pred shape (mb_size), yi shape (mb_size, 1)\n",
+    "            num_total += pred.size(0)\n",
+    "        return float(num_correct)/num_total"
    ]
   },
   {
@@ -355,7 +457,30 @@
    "outputs": [],
    "source": [
     "def train(model, optimiser, epochs=100):\n",
-    "    pass"
+    "    \"\"\"\n",
+    "    Train the model using the previously defined layers\n",
+    "\n",
+    "    Args:\n",
+    "    model (Sequential_layers): The model to train\n",
+    "    optimiser: Predefined and parameterized optimization function\n",
+    "    epochs (int): Number of training epochs\n",
+    "    \"\"\"\n",
+    "    model = model.to(device=device) # With this function we charge the model on the device, on the gpu\n",
+    "    for epoch in range(epochs):\n",
+    "        for i, (xi, yi) in enumerate(train_loader):\n",
+    "            model.train() # Now we set the model on train mode, then it computes the gradiants\n",
+    "            xi = xi.to(device=device, dtype=torch.float32) \n",
+    "            yi = yi.to(device=device, dtype=torch.long)\n",
+    "            scores = model(xi) #Once we charge the images on the GPU the model computes all the variables on the NN\n",
+    "\n",
+    "            cost = F.cross_entropy(input= scores, target=yi) #And with this we get the probability precisión of the calculus\n",
+    "\n",
+    "            optimiser.zero_grad() # This lines cleans the old gradiants calculated\n",
+    "            cost.backward() # Then we compute the gradiants of the loss\n",
+    "            optimiser.step() # Then we perform the update of the nn\n",
+    "\n",
+    "        acc = accuracy(model, val_loader) \n",
+    "        print(f'Epoch: {epoch}, cost: {cost.item()}, accuracy: {acc},')"
    ]
   },
   {
@@ -483,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.12.4"
   },
   "varInspector": {
    "cols": {
