--- a/AMLM/Activity_3a/TC4033_Activity3a_42.ipynb
+++ b/AMLM/Activity_3a/TC4033_Activity3a_42.ipynb
@@ -458,7 +458,9 @@
    "id": "2973e2f7",
    "metadata": {},
    "source": [
-    "### Analogy"
+    "### Analogy\n",
+    "\n",
+    "This function finds the word (from the embeddings dictionary) that best completes the analogy based on cosine similarity. For example, given \"king is to queen as man is to ?\", it should return \"woman\"."
    ]
   },
   {
@@ -469,37 +471,66 @@
    "outputs": [],
    "source": [
     "def analogy(word1, word2, word3, embeddings_dict):\n",
+    "    \"\"\"\n",
+    "    Solves an analogy problem of the form \"word1 is to word2 as word3 is to ?\".\n",
+    "\n",
+    "    Parameters:\n",
+    "    ----------\n",
+    "    word1 : str\n",
+    "        The first word in the analogy pair.\n",
+    "    word2 : str\n",
+    "        The second word in the analogy pair, representing the target for word1.\n",
+    "    word3 : str\n",
+    "        The third word in the analogy, for which we are seeking a related word.\n",
+    "    embeddings_dict : dict\n",
+    "        A dictionary containing word embeddings with words as keys and embedding vectors as values.\n",
+    "\n",
+    "    Returns:\n",
+    "    -------\n",
+    "    str\n",
+    "        The word that best completes the analogy.\n",
+    "    \"\"\"\n",
+    "    # Convert the embeddings for word1, word2, and word3 to numpy arrays\n",
     "    emb_a=np.asarray(embeddings_dict[word1], dtype=np.float32)\n",
     "    emb_b=np.asarray(embeddings_dict[word2], dtype=np.float32)\n",
     "    emb_c=np.asarray(embeddings_dict[word3], dtype=np.float32)\n",
     "\n",
+    "    # Initialize variables to store the best word and the maximum cosine similarity\n",
     "    words = embeddings_dict.keys()\n",
     "    max_cosine_sim = -999              \n",
     "    best_word = None\n",
     "\n",
+    "    # Iterate over each word in the embeddings dictionary\n",
     "    for w in words:        \n",
-    "        # ignore input words\n",
+    "        # Skip the input words (word1, word2, word3) to avoid trivial matches\n",
     "        if w in [word1, word2, word3] :\n",
     "            continue\n",
     "\n",
+    "        # Calculate vector differences: u represents the analogy direction, and v the test direction\n",
     "        u=emb_b - emb_a\n",
     "        v=np.asarray(embeddings_dict[w], dtype=np.float32) - emb_c\n",
     "        \n",
-    "        # find the dot product between u and v \n",
-    "        dot = np.dot(u,v)\n",
-    "        # find the L2 norm of u \n",
-    "        norm_u = np.linalg.norm(u)\n",
-    "        # Compute the L2 norm of v\n",
-    "        norm_v = np.linalg.norm(v)\n",
-    "        # Compute the cosine similarity\n",
-    "        cosine_sim = dot/(norm_u * norm_v)\n",
+    "        # Calculate cosine similarity between u and v\n",
+    "        dot = np.dot(u,v) # Dot product of u and v\n",
+    "        norm_u = np.linalg.norm(u) # L2 norm of u\n",
+    "        norm_v = np.linalg.norm(v) # L2 norm of v\n",
+    "        cosine_sim = dot/(norm_u * norm_v) # Compute cosine similarity\n",
     "        \n",
+    "        # Update best word if a higher cosine similarity is found\n",
     "        if cosine_sim > max_cosine_sim:\n",
     "            max_cosine_sim = cosine_sim\n",
-    "            # update word_d\n",
     "            best_word = w\n",
     "        \n",
+    "    # Return the word that best completes the analogy\n",
     "    return best_word"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf846121",
+   "metadata": {},
+   "source": [
+    "### Solving the analogy"
    ]
   },
   {
@@ -528,7 +559,9 @@
    "id": "96f35fe7",
    "metadata": {},
    "source": [
-    "### Similarity"
+    "### Similarity\n",
+    "\n",
+    "This function computes the cosine similarity between the embedding of the target word and each word in the embeddings dictionary, ranking the results to find the closest matches."
    ]
   },
   {
@@ -539,28 +572,59 @@
    "outputs": [],
    "source": [
     "def find_most_similar(word, embeddings_dict, top_n=10):\n",
+    "    \"\"\"\n",
+    "    Finds the top N most similar words to a given word based on cosine similarity.\n",
+    "\n",
+    "    Parameters:\n",
+    "    ----------\n",
+    "    word : str\n",
+    "        The target word for which similar words are sought.\n",
+    "    embeddings_dict : dict\n",
+    "        A dictionary containing word embeddings with words as keys and \n",
+    "        embedding vectors as values.\n",
+    "    top_n : int, optional\n",
+    "        The number of most similar words to return (default is 10).\n",
+    "\n",
+    "    Returns:\n",
+    "    -------\n",
+    "    list of tuples\n",
+    "        A list of tuples, each containing a similar word and its cosine similarity \n",
+    "        score, sorted in descending order of similarity.\n",
+    "    \"\"\"\n",
+    "    # Define the target word and initialize a dictionary to hold similarity scores\n",
     "    word_tarjet=word\n",
     "    similar={}\n",
+    "\n",
+    "    # Convert the target word's embedding to a numpy array\n",
     "    u=np.asarray(embeddings_dict[word_tarjet], dtype=np.float32)\n",
     "    \n",
+    "    # Calculate cosine similarity between the target word and each word in the embeddings\n",
     "    for word in embeddings_dict.keys():     \n",
-    "        \n",
+    "        # Convert the current word's embedding to a numpy array\n",
     "        v=np.asarray(embeddings_dict[word], dtype=np.float32)\n",
     "        \n",
-    "        # find the dot product between u and v \n",
-    "        dot = np.dot(u,v)\n",
-    "        # find the L2 norm of u \n",
-    "        norm_u = np.linalg.norm(u)\n",
-    "        # Compute the L2 norm of v\n",
-    "        norm_v = np.linalg.norm(v)\n",
-    "        # Compute the cosine similarity\n",
-    "        cosine_sim = dot/(norm_u * norm_v)\n",
-    "        \n",
+    "        # Calculate cosine similarity\n",
+    "        dot = np.dot(u, v)  # Dot product of target and current word embeddings\n",
+    "        norm_u = np.linalg.norm(u)  # L2 norm of the target word embedding\n",
+    "        norm_v = np.linalg.norm(v)  # L2 norm of the current word embedding\n",
+    "        cosine_sim = dot / (norm_u * norm_v)  # Compute cosine similarity\n",
+    "\n",
+    "        # Store the word and its cosine similarity score in the dictionary\n",
     "        similar[word] = cosine_sim\n",
     "        \n",
+    "    # Sort words by similarity score in descending order and exclude the target word itself\n",
     "    sorted_similar = sorted(similar.items(), key=lambda x: x[1], reverse=True)\n",
     "\n",
+    "    # Return the top N most similar words, excluding the target word (first in the sorted list)\n",
     "    return sorted_similar[1:top_n+1] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efbc2db9",
+   "metadata": {},
+   "source": [
+    "### Finding the most similar"
    ]
   },
   {
@@ -597,6 +661,8 @@
     }
    ],
    "source": [
+    "# Iterate through the list of similar words and print each one with its rank.\n",
+    "# 'i' represents the rank, and 'w[0]' is the word (excluding the similarity score).\n",
     "for i, w in enumerate(most_similar, 1):\n",
     "    print(f'{i} ---> {w[0]}')"
    ]
