Se comentó la actividad 3b

--- a/AMLM/Activity_3b/TC5033_Activity3b_42.ipynb
+++ b/AMLM/Activity_3b/TC5033_Activity3b_42.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "49fbed19",
    "metadata": {
     "scrolled": true
@@ -231,17 +231,28 @@
     }
    ],
    "source": [
-    "train_dataset, test_dataset = AG_NEWS()\n",
-    "train_dataset, test_dataset = to_map_style_dataset(train_dataset), to_map_style_dataset(test_dataset)"
+    "\"\"\"\n",
+    "Train and Test sets are created with data of the AG_NEWS\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "train_dataset, test_dataset = AG_NEWS() #Loads the AG_NEWS dataset into train and test sets\n",
+    "train_dataset, test_dataset = to_map_style_dataset(train_dataset), to_map_style_dataset(test_dataset) #Here we converts the datasets to a dict format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9c372eb9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "yield_tokens function iterates through the dataset and generate tokenized text\n",
+    "using the tokenizer\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "# Get the tokeniser\n",
     "# tokeniser object\n",
     "tokeniser = get_tokenizer('basic_english')\n",
@@ -253,11 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "794d0375",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "build_vocab_from_iterator buils a vocavulary from the training data tokens,\n",
+    "also the special \"<unk>\" token from unknown words set at index 0\n",
+    "\"\"\"\n",
+    "\n",
     "# Build the vocabulary\n",
     "vocab = build_vocab_from_iterator(yield_tokens(train_dataset), specials=[\"<unk>\"])\n",
     "#set unknown token at position 0\n",
@@ -266,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b48268d4",
    "metadata": {},
    "outputs": [
@@ -279,6 +295,10 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Here we test the tokenization\n",
+    "\"\"\"\n",
+    "\n",
     "#test tokens\n",
     "tokens = tokeniser('Welcome to TE3007')\n",
     "print(tokens, vocab(tokens))"
@@ -286,28 +306,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c8c8f6a6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "NUM_TRAIN and NUM_VAL contains the number of samples for train and validation\n",
+    "\"\"\"\n",
+    "\n",
     "NUM_TRAIN = int(len(train_dataset)*0.9)\n",
     "NUM_VAL = len(train_dataset) - NUM_TRAIN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8290895e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Then we splits dataset into traning dataset into training and validation sets \n",
+    "with the privous NUM_TRAIN and NUM_VAL\n",
+    "\"\"\"\n",
+    "\n",
     "train_dataset, val_dataset = random_split(train_dataset, [NUM_TRAIN, NUM_VAL])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "cbc75b54",
    "metadata": {},
    "outputs": [
@@ -320,21 +349,32 @@
     }
    ],
    "source": [
-    "print(len(train_dataset), len(val_dataset), len(test_dataset))"
+    "print(len(train_dataset), len(val_dataset), len(test_dataset)) #Prints the lengths of the training, validation, and test datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ffdbf077",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "collate_batch:\n",
+    "\n",
+    "Takes a batch of data as imput\n",
+    "Extracts labels y and text x from the batch\n",
+    "Texts get tokenized using tokeniser and then its converted to numerical indices using vocab\n",
+    "Then sequences are truncated to a fixed length (max_tonekns)\n",
+    "\n",
+    "Returns athe tokenized sequence and labels to pytorch tensors\n",
+    "\"\"\"\n",
+    "\n",
     "# function passed to the DataLoader to process a batch of data as indicated\n",
     "def collate_batch(batch):\n",
     "    # Get label and text\n",
-    "    y, x = list(zip(*batch))\n",
-    "    \n",
+    "    y, x = list(zip(*batch)) #\n",
+    "     \n",
     "    # Create list with indices from tokeniser\n",
     "    x = [vocab(tokeniser(text)) for text in x]\n",
     "    x = [t + ([0]*(max_tokens - len(t))) if len(t) < max_tokens else t[:max_tokens] for t in x]\n",
@@ -345,24 +385,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5eb459c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels =  [\"World\", \"Sports\", \"Business\", \"Sci/Tech\"]\n",
-    "max_tokens = 50\n",
-    "BATCH_SIZE = 256"
+    "labels =  [\"World\", \"Sports\", \"Business\", \"Sci/Tech\"] #List of classes / labels\n",
+    "max_tokens = 50 #Max length on sequences\n",
+    "BATCH_SIZE = 256 #Batch size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "0a55e6ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, collate_fn=collate_batch, shuffle = True)\n",
+    "\"\"\"\n",
+    "Each loaders are created with the sets train, val and test\n",
+    "Here we use collate_batch to process batches\n",
+    "\"\"\"\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, collate_fn=collate_batch, shuffle = True) #\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, collate_fn=collate_batch, shuffle = True)\n",
     "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE, collate_fn=collate_batch, shuffle = True)"
    ]
@@ -377,49 +422,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "50f20793",
    "metadata": {},
    "outputs": [],
    "source": [
-    "EMBEDDING_SIZE = 64 \n",
-    "NEURONS = 64 \n",
-    "LAYERS = 2 \n",
-    "NUM_CLASSES = 4 "
+    "\"\"\"\n",
+    "Constants the will define the model to use\n",
+    "\"\"\"\n",
+    "\n",
+    "EMBEDDING_SIZE = 64  #maps words to dense vectors\n",
+    "NEURONS = 64  #Number of neurons of the fc layer\n",
+    "LAYERS = 2  #Number of LSTM layers stack one behind other\n",
+    "NUM_CLASSES = 4 #Quantity of outputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "0f7f5621",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "The core unit used to processes the tokenized text is a LSTM architecture\n",
+    "LSTM model receive tokens and then computes throught a fc layer to generate 4 outputs for each class\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "class RNN_Model_1(nn.Module):\n",
     "    def __init__(self, embed_size, hidden, layers, num_classes):\n",
     "        super().__init__()\n",
-    "        self.embedding_layer = nn.Embedding(num_embeddings=len(vocab), \n",
-    "                                            embedding_dim=embed_size)\n",
+    "        self.embedding_layer = nn.Embedding(num_embeddings=len(vocab),  # this is the size of the dictionary of embeddings\n",
+    "                                            embedding_dim=embed_size) # this is the size of each embedding vector\n",
     "        \n",
-    "        self.rnn = nn.LSTM(embed_size, hidden, layers, batch_first=True) \n",
-    "        # complete this code/\n",
-    "        # You may use PyTorch nn.GRU(), nn.RNN(), or nn.LSTM()\n",
+    "        self.rnn = nn.LSTM(embed_size, hidden, layers, batch_first=True)    #the embed vector is received and proces 2 times as  \n",
+    "                                                                            #defined before on the layers, batch_firts indicates that the tensor has the \n",
+    "                                                                            #length of the batch on the first position of the tensor\n",
+    "       \n",
     "        \n",
-    "        self.fc = nn.Linear(hidden, num_classes)\n",
-    "        # complete output classifier layer using linear layer\n",
+    "        self.fc = nn.Linear(hidden, num_classes)    # Here we use a FC layer to processes the data to get the outputs \n",
+    "                                                    # num_classes is the 4 clases to predict \"World\", \"Sports\", \"Business\", \"Sci/Tech\"\n",
+    "        \n",
     "    \n",
-    "    def forward(self, x):\n",
-    "        x = self.embedding_layer(x)\n",
-    "        output, (x , _) = self.rnn(x)\n",
-    "        x = x[-1,:,:]\n",
-    "        x = self.fc(x)\n",
+    "    def forward(self, x): #The input to the module is a list of indices\n",
+    "        x = self.embedding_layer(x) #The output is the corresponding word embeddings\n",
+    "        output, (x , _) = self.rnn(x) #x is a vector of the hidden states computed from the LSTM cell (or cells)\n",
+    "        x = x[-1,:,:] # the final hidden stated is extracted\n",
+    "        x = self.fc(x) # the output \n",
     "        return x\n",
-    "        # implement forward pass. This function will be called when executing the model"
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "2a42613f",
    "metadata": {
     "code_folding": []
@@ -427,17 +484,18 @@
    "outputs": [],
    "source": [
     "def accuracy(model, loader):\n",
-    "    correctos = 0\n",
-    "    total = 0\n",
+    "    correctos = 0 #number of correct outputs that correspont to the true labels\n",
+    "    total = 0 #total of correct outputs generated on the full batch\n",
     "    model.eval() # This function set the model on evaluation, then it will not compute the gradiants of the parameters\n",
     "    model = model.to(device=device) # The model is charged on the device, on the gpu\n",
     "    with torch.no_grad():\n",
-    "        for x_batch, y_batch in loader:\n",
+    "        for x_batch, y_batch in loader: \n",
+    "            #The batched data are charged to the gpu\n",
     "            x_batch, y_batch = x_batch.to(device=device, dtype=torch.int),y_batch.to(device=device, dtype=torch.long)\n",
     "\n",
-    "            resultados = model(x_batch)\n",
+    "            resultados = model(x_batch) #the model processes and returns the predicted outputs\n",
     "            \n",
-    "            _, predicciones = resultados.max(dim=1)  #pred shape (mb_size ) \n",
+    "            _, predicciones = resultados.max(dim=1)  #pred shape \n",
     "            # the predicted labels are compared with the true labels and get summed all the right answers\n",
     "            correctos += (predicciones == y_batch).sum()  \n",
     "            total += predicciones.size(0) \n",
@@ -448,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5e843e1f",
    "metadata": {
     "code_folding": []
@@ -456,38 +514,46 @@
    "outputs": [],
    "source": [
     "def train(model, optimiser, epochs=100):\n",
-    "    model = model.to(device=device)\n",
-    "    for epoch in range(epochs):\n",
+    "    model = model.to(device=device) #the model is charged on the gpu\n",
+    "    for epoch in range(epochs): #the model is going to loop on the range of number of epochs\n",
     "        \n",
     "        for i, (x_batch,y_batch) in enumerate(train_loader):\n",
-    "            model.train()\n",
+    "            model.train() #the model is set on train mode\n",
     "            \n",
+    "            #the data are charged on the gpu to be computed\n",
     "            x_batch, y_batch = x_batch.to(device, dtype=torch.int), y_batch.to(device, dtype=torch.long)\n",
     "    \n",
+    "            #model processes the data and the output is saved on the resultados variable\n",
     "            resultados = model(x_batch)\n",
-    "            loss = F.cross_entropy(input= resultados, target=y_batch)\n",
+    "            #loss is calculated with cross entropy because we are looking throught many labels\n",
+    "            loss = F.cross_entropy(input= resultados, target=y_batch) \n",
     "\n",
-    "            optimiser.zero_grad()\n",
-    "            loss.backward()\n",
-    "            optimiser.step()\n",
+    "            optimiser.zero_grad() #optimiser is cleaned \n",
+    "            loss.backward() #loss calculates the gradiants to uptdate the weights \n",
+    "            optimiser.step() #weights are updated\n",
     "\n",
-    "            acc = accuracy(model, val_loader) \n",
+    "            acc = accuracy(model, val_loader)  # accuracy is called to find how correct the model is with the val set\n",
     "        print(f\"Epoch [{epoch+1}/{epochs}], Loss: {loss.item():.4f}, Acc: {acc}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "87775b29",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "We set the number of epochs for the train\n",
+    "lr indicates the change to reduce the loss of the model\n",
+    "\"\"\"\n",
+    "\n",
     "epochs = 3\n",
     "lr = 0.01\n",
     "\n",
     "\n",
     "# instantiate model\n",
-    "rnn_model = RNN_Model_1(EMBEDDING_SIZE, NEURONS, LAYERS, NUM_CLASSES)\n",
+    "rnn_model = RNN_Model_1(EMBEDDING_SIZE, NEURONS, LAYERS, NUM_CLASSES) #\n",
     "optimiser = torch.optim.Adam(rnn_model.parameters(), lr=lr)\n"
    ]
   },
@@ -557,31 +623,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ed30693d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "sample_text\n",
+    "samples a batch of data from the test loader\n",
+    "makes a prediction on the data \n",
+    "and then the original text, true label, and the predicted label for each sample is printed\n",
+    "the print is stopped when a <pad> is found or when the second batch is gotten\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "def sample_text(model, loader):\n",
-    "    model.eval()\n",
-    "    samples=[]\n",
+    "    model.eval() #model is set on eval mode\n",
+    "    samples=[] #this list saves the samples taken\n",
     "    with torch.no_grad():\n",
-    "        for i, (x_batch, y_batch) in enumerate(loader):\n",
+    "        for i, (x_batch, y_batch) in enumerate(loader): #the test loader is iterated\n",
     "            \n",
     "            if (i == 1):\n",
-    "                break\n",
+    "                break #when the loop gets to the second batch is gotten\n",
     "          \n",
+    "            # the data is loaded in the gpu\n",
     "            x_batch, y_batch = x_batch.to(device=device, dtype=torch.int),y_batch.to(device=device, dtype=torch.long)\n",
-    "            resultados = model(x_batch)\n",
-    "            _, predicciones = resultados.max(dim=1)  #pred shape (mb_size )\n",
+    "            resultados = model(x_batch) #the model processes the data\n",
+    "            _, predicciones = resultados.max(dim=1)  #the predictions are taken from the fist dimension to the output tensor\n",
     "    \n",
-    "            for j in range(len(x_batch)):\n",
-    "                texto_tokens = vocab.lookup_tokens(x_batch[j].cpu().numpy())\n",
-    "                if texto_tokens == '<pad>':\n",
+    "            for j in range(len(x_batch)): #the original text tokenized is iterated\n",
+    "                texto_tokens = vocab.lookup_tokens(x_batch[j].cpu().numpy()) #each number tokenized that represents a word return to be a word\n",
+    "                if texto_tokens == '<pad>': #when the restored word is <pad> then the print and all is stopped \n",
     "                    break\n",
-    "                texto_original = ' '.join(texto_tokens)\n",
-    "                prediccion = labels[predicciones[j]]\n",
-    "                real = labels[y_batch[j]]\n",
+    "                texto_original = ' '.join(texto_tokens) #all the returned words are joinned\n",
+    "                prediccion = labels[predicciones[j]] #the prediction is taken from predicciones \n",
+    "                real = labels[y_batch[j]] #the true label is taken\n",
     "\n",
     "        samples.append((texto_original,real,prediccion))\n",
     "    print('muestras de prediccion: ')\n",
@@ -613,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "bb38e093",
    "metadata": {},
    "outputs": [
@@ -630,27 +706,38 @@
    ],
    "source": [
     "\n",
+    "\"\"\"\n",
+    "plot_confusion_matrix:\n",
+    "\n",
+    "Calculates the confusion matrix on the test set\n",
+    "Visualizes the confusion matrix using a heatmap\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def plot_confusion_matrix(model, loader, labels):\n",
-    "    model.eval()\n",
-    "    model = model.to(device)\n",
+    "    model.eval() #sets the model to evaluation mode\n",
+    "    model = model.to(device) #the model is sent to the gpu\n",
     "\n",
+    "    #Here the true labels and predicted labels are stored\n",
     "    total_predicciones = []\n",
     "    total_verdaderos = []\n",
     "\n",
-    "    with torch.no_grad():\n",
+    "    with torch.no_grad(): #no gradiants are going to be calculated\n",
     "        for x_batch, y_batch in loader:\n",
+    "            #Data is sent to the hpu\n",
     "            x_batch, y_batch = x_batch.to(device, dtype=torch.int), y_batch.to(device, dtype=torch.long)\n",
     "\n",
-    "            resultado = model(x_batch)\n",
-    "            _, predicciones = resultado.max(dim=1)\n",
+    "            resultado = model(x_batch) # Model processes and return the predicted data\n",
+    "            _, predicciones = resultado.max(dim=1)  #The second tensor contains the indices of the maximum values\n",
     "\n",
-    "            total_predicciones.extend(predicciones.cpu().numpy())\n",
-    "            total_verdaderos.extend(y_batch.cpu().numpy())\n",
+    "            total_predicciones.extend(predicciones.cpu().numpy()) #then predicted data is stored\n",
+    "            total_verdaderos.extend(y_batch.cpu().numpy()) # true data is stered\n",
     "\n",
+    "    #With sklearn.metrics confusion matrix is displayed\n",
     "    cm = confusion_matrix(total_predicciones, total_verdaderos)\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=labels, yticklabels=labels)\n",
