Se actualizo matriz de confusion del 3b y se agrego descripcion de glove 3a

--- a/AMLM/Activity_3a/TC4033_Activity3a_42.ipynb
+++ b/AMLM/Activity_3a/TC4033_Activity3a_42.ipynb
@@ -112,6 +112,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5977f0ac",
+   "metadata": {},
+   "source": [
+    "### GloVe 6B 50D Word Embeddings\n",
+    "GloVe is an unsupervised learning algorithm for obtaining vector representations for words. Training is performed on aggregated global word-word co-occurrence statistics from a corpus, and the resulting representations showcase interesting linear substructures of the word vector space."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "8c3c9d2a",
