Add description about GloVe

--- a/AMLM/Activity_3a/TC4033_Activity3a_42.ipynb
+++ b/AMLM/Activity_3a/TC4033_Activity3a_42.ipynb
@@ -117,7 +117,9 @@
    "metadata": {},
    "source": [
     "### GloVe 6B 50D Word Embeddings\n",
-    "GloVe is an unsupervised learning algorithm for obtaining vector representations for words. Training is performed on aggregated global word-word co-occurrence statistics from a corpus, and the resulting representations showcase interesting linear substructures of the word vector space."
+    "GloVe 6B 50D Word Embeddings refer to a pre-trained set of word vectors developed by researchers at Stanford using the GloVe (Global Vectors for Word Representation) algorithm. The “6B” indicates that these embeddings were trained on a corpus of 6 billion tokens (words) from sources like Wikipedia and Gigaword, while “50D” specifies that each word is represented as a 50-dimensional vector.\n",
+    "\n",
+    "GloVe embeddings capture the semantic relationships between words by analyzing word co-occurrence patterns within the corpus. Words with similar meanings tend to have vectors that are close in this 50-dimensional space, making GloVe embeddings useful for natural language processing tasks such as sentiment analysis, named entity recognition, and machine translation."
    ]
   },
   {
