Adding description about confusion matrix

--- a/AMLM/Activity_3b/TC5033_Activity3b_42.ipynb
+++ b/AMLM/Activity_3b/TC5033_Activity3b_42.ipynb
@@ -2041,6 +2041,22 @@
     "# Call the function to plot the confusion matrix for the test set predictions\n",
     "plot_confusion_matrix(rnn_model, test_loader, labels)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d676e3b",
+   "metadata": {},
+   "source": [
+    "The confusion matrix shows the model’s performance across four classes: **World**, **Sports**, **Business**, and **Sci/Tech**. Most predictions are correct, but the matrix reveals some common mistakes:\n",
+    "\n",
+    "1. **Business and Sci/Tech Confusion**: The model frequently confuses **Business** with **Sci/Tech**, as shown by the 137 Sci/Tech instances incorrectly classified as Business and the 177 Business instances misclassified as Sci/Tech. This may be due to overlapping terminology or similar contexts in these fields.\n",
+    "\n",
+    "2. **World vs. Sci/Tech**: A smaller, but notable, number of **World** articles are misclassified as **Sci/Tech** (45 instances). This could occur if articles on global tech issues are mistakenly interpreted as purely technical content.\n",
+    "\n",
+    "3. **Business vs. World**: Some **Business** articles are confused with **World** topics (72 instances), likely when articles discuss international economic events or policies.\n",
+    "\n",
+    "The matrix highlights that the model generally performs well but struggles with semantic overlaps between categories like Business and Sci/Tech, where content may not be distinctly separate."
+   ]
   }
  ],
  "metadata": {
