Agregué comentarios debajo de los apartados de Simple Test  Translator Eng-Spa para darle orientación al lector sobré qué hace cada parte

--- a/AMLM/Activity_4/TC4033_Activity4_42.ipynb
+++ b/AMLM/Activity_4/TC4033_Activity4_42.ipynb
@@ -857,6 +857,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0652ae7",
+   "metadata": {},
+   "source": [
+    "#### Explanation\n",
+    "This simple test have the tarjet of creating synthetic data that test model correctness functionality. The main idea is provide random data simulating real words and providing them to the model. \n",
+    "\n",
+    "The expected output is a tensor which deliver the word index that would match the best on spanish.\n",
+    "\n",
+    "All the required variables are defined to run the correct simalation of this test."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a4b9ad8",
    "metadata": {},
    "source": [
@@ -977,6 +990,24 @@
    "metadata": {},
    "source": [
     "## Translator Eng-Spa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15c42b9b",
+   "metadata": {},
+   "source": [
+    "### Explanation\n",
+    "\n",
+    "This translator eng-spa is created on training the transformer model written above. The main idea is provide the eng-spa.tsv doc that contains couples of words: first on english and second on the posible translation in spanish.\n",
+    "\n",
+    "In order to be able to translate the words, both english and spanish, are corrected removing special signs and setting them on lowercase.\n",
+    "\n",
+    "Once the words are cleaned the function build_vocab iterates all the sentences and find all the words on the dictionary. Addionally, index to word dictionaries are created to exchange between tokens and words for english or spanish.\n",
+    "\n",
+    "EngSpaDataset is the dataset that returns the tokens index of the words when a sentence is provided.\n",
+    "\n",
+    "The train function iterates the model and calculates the loss function to improve the weights of the transformer model."
    ]
   },
   {
@@ -1790,7 +1821,12 @@
     "    \"Hello, how are you?\",\n",
     "    \"I am learning artificial intelligence.\",\n",
     "    \"Artificial intelligence is great.\",\n",
-    "    \"Good night!\"\n",
+    "    \"Good night!\",\n",
+    "    \"Hello friend\",\n",
+    "    \"Do you like artificial intelligence?\",\n",
+    "    \"It's a nice evening\",\n",
+    "    \"I did my homework\",\n",
+    "    \"We should go out someday\"\n",
     "]\n",
     "\n",
     "# Move model to available device (CPU or GPU)\n",
