Cambié los enunciados de ejemplo en la celda final

--- a/AMLM/Activity_4/TC4033_Activity4_42.ipynb
+++ b/AMLM/Activity_4/TC4033_Activity4_42.ipynb
@@ -860,7 +860,7 @@
    "id": "d0652ae7",
    "metadata": {},
    "source": [
-    "#### Explanation\n",
+    "### Explanation\n",
     "This simple test have the tarjet of creating synthetic data that test model correctness functionality. The main idea is provide random data simulating real words and providing them to the model. \n",
     "\n",
     "The expected output is a tensor which deliver the word index that would match the best on spanish.\n",
@@ -1818,15 +1818,15 @@
     "\n",
     "# Example sentences to test the translation model\n",
     "test_sentences = [\n",
-    "    \"Hello, how are you?\",\n",
-    "    \"I am learning artificial intelligence.\",\n",
-    "    \"Artificial intelligence is great.\",\n",
-    "    \"Good night!\",\n",
-    "    \"Hello friend\",\n",
+    "    \"I am not a robot.\",\n",
+    "    \"I can learn artificial intelligence.\",\n",
+    "    \"The dinner is on the table\",\n",
+    "    \"I am a human.\",\n",
+    "    \"Hello friend.\",\n",
     "    \"Do you like artificial intelligence?\",\n",
-    "    \"It's a nice evening\",\n",
-    "    \"I did my homework\",\n",
-    "    \"We should go out someday\"\n",
+    "    \"It's a nice evening.\",\n",
+    "    \"I did my homework.\",\n",
+    "    \"We should go out someday.\"\n",
     "]\n",
     "\n",
     "# Move model to available device (CPU or GPU)\n",
